# FamilyVault

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial.py
backend/familyvault/: audit.py  auth.py  config.py  crypto.py  db.py  main.py  models.py  rbac.py  schemas.py
backend/familyvault/routes/: auth.py  calendar.py  chores.py  expenses.py  families.py  medical.py  shopping.py  vault.py
backend/tests/: test_app.py
web/: package.json
web/src/: App.tsx  styles.css
web/src/api/: client.ts
web/src/auth/: AuthContext.tsx
web/src/components/: ConfirmDialog.tsx  EmptyState.tsx  FamilySwitcher.tsx  Layout.tsx  TagChips.tsx  Topbar.tsx
web/src/pages/: Calendar.tsx  Chores.tsx  Dashboard.tsx  Expenses.tsx  Medical.tsx  Register.tsx  Shopping.tsx  Vault.tsx
